# grafana-pandas-datasource

./: .gitignore  CHANGES.rst  README.rst  grafana_pandas_datasource.py  pyproject.toml  requirements.txt
docs/: backlog.rst  release.rst  setup.rst
examples/: demo.py
examples/phenodata-mellifera/: dashboard.json  datasource.json  demo.py  readme.rst
examples/sinewave-midnights/: dashboard.json  datasource.json  demo.py  readme.rst
grafana_pandas_datasource/: __init__.py  config.py  core.py  logging.py  registry.py  service.py  util.py
